--- a/iCare/app/src/main/res/layout/my_family_detail.xml
+++ b/iCare/app/src/main/res/layout/my_family_detail.xml
@@ -44,136 +44,207 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="6dp">
-
-                    <com.sundy.icare.customs.CircleImageView
-                        android:id="@+id/img"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_margin="10dp"
-                        android:background="@null"
-                        android:src="@mipmap/profile_img"
-                        app:border_color="#00000000" />
-
-                    <TextView
-                        android:id="@+id/txtName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_toLeftOf="@+id/imgQR"
-                        android:layout_toRightOf="@+id/img"
-                        android:singleLine="true"
-                        android:text="爸爸（陈大文）"
-                        android:textColor="@color/material_grey_850"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/txtMobile"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/txtName"
-                        android:layout_marginTop="5dp"
-                        android:layout_toLeftOf="@+id/imgQR"
-                        android:layout_toRightOf="@+id/img"
-                        android:singleLine="true"
-                        android:text="手机号码：13400002222" />
-
-                    <ImageView
-                        android:id="@+id/imgQR"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="5dp"
-                        android:padding="5dp"
-                        android:src="@mipmap/icon_qrcode" />
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="15dp"
-                    android:background="@color/material_grey_300" />
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txt_Comment"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="44dp"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:text="@string/set_comment"
-                        android:textColor="@color/material_grey_850"
-                        android:textSize="14sp" />
+                        android:layout_height="wrap_content"
+                        android:padding="6dp">
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/material_grey_300" />
+                        <com.sundy.icare.customs.CircleImageView
+                            android:id="@+id/img"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_margin="10dp"
+                            android:background="@null"
+                            android:src="@mipmap/profile_img"
+                            app:border_color="#00000000" />
 
-                    <TextView
-                        android:id="@+id/txt_Event"
-                        android:layout_width="match_parent"
-                        android:layout_height="44dp"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:text="@string/add_event"
-                        android:textColor="@color/material_grey_850"
-                        android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/txtName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_toLeftOf="@+id/imgQR"
+                            android:layout_toRightOf="@+id/img"
+                            android:singleLine="true"
+                            android:text="爸爸（陈大文）"
+                            android:textColor="@color/material_grey_850"
+                            android:textSize="14sp" />
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/material_grey_300" />
+                        <TextView
+                            android:id="@+id/txtMobile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/txtName"
+                            android:layout_marginTop="5dp"
+                            android:layout_toLeftOf="@+id/imgQR"
+                            android:layout_toRightOf="@+id/img"
+                            android:singleLine="true"
+                            android:text="手机号码：13400002222" />
 
-                    <TextView
-                        android:id="@+id/txt_Remind"
-                        android:layout_width="match_parent"
-                        android:layout_height="44dp"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:text="@string/add_remind"
-                        android:textColor="@color/material_grey_850"
-                        android:textSize="14sp" />
+                        <ImageView
+                            android:id="@+id/imgQR"
+                            android:layout_width="40dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="5dp"
+                            android:padding="5dp"
+                            android:src="@mipmap/icon_qrcode" />
+                    </RelativeLayout>
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="15dp"
                         android:background="@color/material_grey_300" />
-                </LinearLayout>
-            </LinearLayout>
-        </ScrollView>
 
-        <Button
-            android:id="@+id/btn_Talk"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/txt_Comment"
+                            android:layout_width="match_parent"
+                            android:layout_height="44dp"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:text="@string/set_comment"
+                            android:textColor="@color/material_grey_850"
+                            android:textSize="14sp" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/material_grey_300" />
+
+                        <TextView
+                            android:id="@+id/txt_Event"
+                            android:layout_width="match_parent"
+                            android:layout_height="44dp"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:text="@string/add_event"
+                            android:textColor="@color/material_grey_850"
+                            android:textSize="14sp" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/material_grey_300" />
+
+                        <TextView
+                            android:id="@+id/txt_Remind"
+                            android:layout_width="match_parent"
+                            android:layout_height="44dp"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:text="@string/add_remind"
+                            android:textColor="@color/material_grey_850"
+                            android:textSize="14sp" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="15dp"
+                            android:background="@color/material_grey_300" />
+                    </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
+
+            <Button
+                android:id="@+id/btn_Talk"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/corner_btn_green"
+                android:text="@string/get_chat"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/linear_More"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
-            android:background="@drawable/corner_btn_green"
-            android:text="@string/get_chat"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:background="#f95151"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/icon_delete_white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/delete"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <ImageView
+                    android:id="@+id/imgHeader"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/add_to_destop"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+            </LinearLayout>
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
