--- a/iCare/app/src/main/res/layout/fragment_service.xml
+++ b/iCare/app/src/main/res/layout/fragment_service.xml
@@ -72,6 +72,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:id="@+id/linear_tap"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/btn_All"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/str_all"
+                android:textColor="@color/material_grey_850"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="7dp"
+                android:layout_marginTop="7dp"
+                android:background="@color/material_grey_300" />
+
+            <TextView
+                android:id="@+id/btn_Service_Type"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/service_type"
+                android:textColor="@color/material_grey_850"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="7dp"
+                android:layout_marginTop="7dp"
+                android:background="@color/material_grey_300" />
+
+            <TextView
+                android:id="@+id/btn_Sort"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/sort"
+                android:textColor="@color/material_grey_850"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/img_line"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_below="@+id/linear_tap"
+            android:background="@color/material_grey_300" />
+
+        <ListView
+            android:id="@+id/lv_Data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/img_line"
+            android:background="#99FFFFFF"
+            android:divider="@null"
+            android:scrollingCache="false" />
+
         <ProgressBar
             android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyle"
