--- a/iCare/app/src/main/res/layout/item_my_order_list_view.xml
+++ b/iCare/app/src/main/res/layout/item_my_order_list_view.xml
@@ -27,49 +27,26 @@
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@+id/txtStatus"
             android:layout_toRightOf="@+id/img"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_centerVertical="true">
 
             <TextView
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="钟先生"
+                android:text="帮手买10斤大米"
                 android:textColor="@color/material_blue_grey_950"
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/txtTitleServiceType"
+                android:id="@+id/txtServer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:text="@string/service_type"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/txtServiceType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="司机、载货"
+                android:text="陈先生正在为您服务"
                 android:textColor="@color/material_grey_850"
                 android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/txtTitleServiceTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/can_service_time"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/txtServiceTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="12:00 ~ 1:30/14:30~16:00"
-                android:textColor="@color/material_grey_850"
-                android:textSize="15sp" />
         </LinearLayout>
 
         <TextView
@@ -78,23 +55,23 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:text="距离：300米"
-            android:textColor="@color/material_grey_800"
-            android:textSize="12sp" />
+            android:layout_marginTop="10dp"
+            android:text="进行中"
+            android:textColor="#FF14890C"
+            android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/txtStar"
+            android:id="@+id/txtCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="false"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/txtStatus"
+            android:text="45.0元"
+            android:textColor="@color/orange"
+            android:textSize="18sp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="10dp"
-            android:text="评分：4.7分"
-            android:textColor="@color/material_grey_800"
-            android:textSize="12sp" />
+            android:layout_marginTop="5dp" />
 
     </RelativeLayout>
 
